upgrade poms to actually build module!